# aiohttp-things

./: .travis.yml  README.rst  example.py  pyproject.toml
.github/workflows/: ci.yml
aiohttp_things/: __init__.py  handlers.py  views.py  web_handlers.py
docs/: conf.py  examples.rst  index.rst  reference.rst  releases.rst
src/aiohttp_things/: __init__.py  views.py  web_handlers.py
tests/: conftest.py  test_aiohttp_things.py  test_metainfo.py  test_views.py  test_web_handlers.py
