[tool.poetry]
name = "aiohttp-things"
version = "0.14.0"
description = "Modest utility collection for development with AIOHTTP framework."
license = "MIT"

authors = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]
maintainers = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]

readme = "README.rst"
homepage = "https://github.com/ri-gilfanov/aiohttp-things"
repository = "https://github.com/ri-gilfanov/aiohttp-things"
documentation = "https://aiohttp-things.readthedocs.io/"

keywords = ["aiohttp", "asyncio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: aiohttp",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4.post0"

[tool.poetry.dev-dependencies]
aiohttp_jinja2 = ">=1.4.2"
flake8 = ">=4.0.1"
isort = ">=5.10.1"
mypy = ">=0.910"
pytest = ">=6.2.5"
pytest-cov = ">=3.0.0"
Sphinx = ">=4.3.1"
sphinx_rtd_theme = ">=1.0.0"
tomli = ">=1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_first_party = ["aiohttp_things"]
known_third_party = ["aiohttp"]
profile = "wemake"
src_paths = ["aiohttp_things", "tests"]
extend_skip = ["example.py"]

[tool.mypy]
files = ["aiohttp_things", "tests"]
